# re-frame

./: .dockerignore  .env.example  .env.test.example  .eslintrc.json  .gitignore  .mcp.json  .pre-commit-config.yaml  .rsync_filter  AUDIO_INTEGRATION_PLAN.md  AUDIO_UX_DESIGN.md  BACKEND_TEAM_KICKOFF.md  BACKEND_WORKTREE_HANDOFF.md  CLAUDE-BACKEND.md  CLAUDE-FRONTEND.md  CLAUDE-INFRA.md  CLAUDE.md  Dockerfile.playwright  E2E_TESTS_FIXED_SUMMARY.md  IMPLEMENTATION_REPORT.md  ISSUE_137_STATUS.md  Makefile  PROJECT_STATUS.md  PR_195_REVIEW_REPORT.md  README.md  SECURITY.md  UI_CHANGES_FINAL_IMPLEMENTATION_PLAN.md  UI_CHANGES_IMPLEMENTATION_PLAN.md  backend_team_message.txt  cloudbuild.yaml  coverage.xml  debug-sse.html  demo-complete-session.js  docker-compose.dev.yml  docker-compose.integration.yml  docker-compose.override.yml  docker-compose.perf.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  file-naming-analysis.md  (+20 more)
.githooks/: commit-msg  prepare-commit-msg
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER.md  Dockerfile  README.md  __init__.py  docker-compose.yml  issues_report.md  main.py  pyproject.toml  pytest_run_output.txt  requirements.txt  run_adk_web.py  sitecustomize.py  test_adk_import.py
backend/agents/: ADK_MIGRATION_PLAN.md  ADK_MIGRATION_SUMMARY.md  __init__.py  act_framework_agent.py  adk_base.py  adk_cbt_agent.py  adk_config.py  adk_intake_agent.py  adk_observability.py  adk_parallel_framework_processor.py  adk_registry.py  adk_session_manager.py  adk_synthesis_agent.py  adk_tools.py  base.py  cbt_framework_agent.py  dbt_framework_agent.py  framework.py  framework_selector.py  intake.py  intake_agent.py  models.py  multi_framework_synthesis.py  schemas.py  stoicism_framework_agent.py  synthesis.py  synthesis_agent.py
backend/api/: health.py  reframe.py  schemas.py
backend/config/: gemini.py  settings.py
backend/core/: logging_config.py
backend/docs/: ADK_SCHEMA_GUIDE.md  ADK_WEB_GUIDE.md  API_USAGE_GUIDE.md  API_VERSIONING.md  _index.md  adk-docs.md  api-testing-progress.md  backend-fixes-plan.md  configcat-setup.md  framework_integration_design.md  postman_collection.json  streaming_implementation_plan.md  streaming_implementation_plan_final.md  streaming_implementation_plan_v2.md
backend/docs/adk-docs/: runtime.md  streaming.md  tutorials.md
backend/docs/adk-docs/agents/: multi-agents.md
backend/docs/adk-docs/assets/: agent-development-kit.png.md
backend/docs/adk-docs/callbacks/: types-of-callbacks.md
backend/docs/adk-docs/get-started/: installation.md
backend/docs/adk-docs/grounding/: google_search_grounding.md
backend/docs/adk-docs/tools/: built-in-tools.md
backend/docs/adk-docs/tutorials/: agent-team.md
backend/docs/design/: technical_spec.md
backend/docs/examples/: _index.md  audio_config_example.py  session_initialization_example.py  update_main_with_voice.md
backend/docs/examples/peteryxu/: adk-samples.md
backend/docs/examples/resources/: articles.md
backend/middleware/: __init__.py  abuse_prevention.py  cors.py  logging.py  rate_limit.py  rate_limiting.py
backend/src/: __init__.py  config.py  main.py
backend/src/agents/: __agent__.py  __init__.py  adk_integration.py  cbt_assistant.py  composer.py  crisis.py  discovery_agent.py  greeting_agent.py  orchestrator.py  phase_manager.py  reframing_agent.py  state.py  summary_agent.py  ui_contract.py
backend/src/agents/utils/: __init__.py  intent.py  summarizer.py
backend/src/knowledge/: cbt_context.py
backend/src/models/: __init__.py  api.py  gemini_client.py
backend/src/prompts/: discovery.md  discovery_es.md  reframing_es.md  summary.md
backend/src/routers/: asr.py  feature_flags.py  websocket.py
backend/src/routes/: feedback.py  recaptcha_util.py
backend/src/services/: audio_pipeline.py
backend/src/text/: __init__.py  router.py  router_reactive.py
backend/src/utils/: __init__.py  audio_converter.py  configcat_flags.py  crawl.py  feature_flags.py  feature_flags_migration.py  language_detection.py  language_utils.py  local_resources.py  logging.py  metrics_router.py  pdf_generator.py  performance_monitor.py  prompt_loader.py  rate_limiter.py  safety_response.py  session_manager.py  status_router.py
backend/src/utils/feature_flags/: models.py  protocols.py  service.py
backend/src/voice/: __init__.py  models.py  router.py  session_manager.py  stream_handler.py
backend/tests/: __init__.py  conftest.py  test_abuse_prevention.py  test_act_framework_agent.py  test_adk_base_agent.py  test_adk_intake_agent.py  test_adk_parallel_framework_processing.py  test_adk_session_manager.py  test_agent_language_propagation.py  test_agent_session_language.py  test_api_health.py  test_api_main.py  test_api_reframe.py  test_audio_converter.py  test_audio_error_handling.py  test_audio_pipeline.py  test_audio_quality.py  test_audio_roundtrip.py  test_audio_security.py  test_audio_utils.py  test_base_agent.py  test_cbt_agent.py  test_cbt_assistant.py  test_cbt_context.py  test_cbt_knowledge_tool.py  test_configcat_feature_flags.py  test_dbt_framework_agent.py  test_discovery_phase.py  test_docker_build.py  test_feature_flag_router.py  test_feature_flags.py  test_framework_selector.py  test_greeting_agent_i18n.py  test_greeting_agent_reactive.py  test_greeting_phase.py  test_health.py  test_integration_google_ai.py  test_language_detection.py  test_language_endpoint.py  test_language_utils.py  (+31 more)
backend/tests/e2e/: __init__.py  conftest.py  test_language_parameter_e2e.py
backend/tests/fixtures/: __init__.py  audio_samples.py  language_fixtures.py  test_data_generator.py
backend/tests/integration/: README.md  test_configcat_integration.py  test_language_flow.py  test_reactive_session_flow.py
backend/tests/load/: __init__.py  run_load_test.py  test_voice_concurrency.py
backend/tests/load_testing/: __init__.py  test_load_scenarios.py
backend/tests/mocks/: __init__.py  audio_mocks.py  mock_session_manager.py
backend/tests/stubs/google/: __init__.py
backend/tests/stubs/langdetect/: __init__.py
(+679 files in other folders)
